[project]
name = "sdr-m3u-tuner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask==3.1.1",
    "loguru==0.7.3",
    "mypy==1.16.0",
    "numpy==2.2.6",
    "pyyaml==6.0.2",
    "pyzmq==26.4.0",
    "types-pyyaml==6.0.12.20250516",
]

[tool.ruff]
extend-exclude = [
    "**/gr/**"
]
